maze.lessons.maze.island.IslandMaze.scala.code
override def run() {

  def placement(){
		if(!estFaceMur();){avance();}
    else if(estFaceMur()){
      while(estFaceMur()){droite()}
      avance();gauche();
    }
  }

  
  

  while(!estSurBiscuit()){       
    placement()
  }
  prendBiscuit()
}